--- a/Lesson00.5/StartOfLesson/ToDo/ToDo.csproj
+++ b/Lesson00.5/StartOfLesson/ToDo/ToDo.csproj
@@ -1,7 +1,9 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp2.1</TargetFramework>
+    <AssemblyName>ToDoApp</AssemblyName>
+    <RootNamespace>ToDoApp</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
