--- a/Lesson06/StartOfLesson/ToDo/ToDo.csproj
+++ b/Lesson06/StartOfLesson/ToDo/ToDo.csproj
@@ -12,6 +12,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="Areas\Identity\Services\" />
     <Folder Include="Views\Status\" />
   </ItemGroup>
 
